--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,7 @@ app.*.symbols
 
 # Obfuscation related
 app.*.map.json
+
+/lib/controllers/controller_panel_controller.dart
+/lib/controllers/general_controller.dart
+/lib/controllers/home_controller.dart
