--- a/.gitignore
+++ b/.gitignore
@@ -37,8 +37,8 @@ app.*.symbols
 # Obfuscation related
 app.*.map.json
 
-/lib/controllers/controller_panel_controller.dart
-/lib/controllers/general_controller.dart
-/lib/controllers/home_controller.dart
+**/lib/controllers/controller_panel_controller.dart
+**/lib/controllers/general_controller.dart
+**/lib/controllers/home_controller.dart
 
 *general*
